--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,13 @@
       }
     ],
     
+    "rewrites": [
+        {
+          "source": "/(.*)",
+          "destination": "/"
+        }
+    ],
+  
     "routes": [
       {
        
