--- a/vercel.json
+++ b/vercel.json
@@ -40,6 +40,11 @@
        
         "src": "/(.+)",
         "dest": "build/$1"
+      },
+      {
+       
+        "src": "/(.+)",
+        "dest": "build/$1"
       }
 
       
