--- a/vercel.json
+++ b/vercel.json
@@ -38,8 +38,8 @@
       },
       {
        
-        "src": "/(.+)",
-        "dest": "build/$1"
+        "src": "/(.*)",
+        "dest": "build/index.html"
       }
 
       
