--- a/vercel.json
+++ b/vercel.json
@@ -4,45 +4,15 @@
       {
         "src": "index.js",
         "use": "@vercel/node"
-      },
-      {
-        "src": "build/**",
-        "use": "@vercel/static"
       }
     ],
     
     "routes": [
       {
        
-        "src": "/users/",
+        "src": "/(.*)",
         "dest": "index.js"
-      },
-      {
-       
-        "src": "/users/(.*)",
-        "dest": "index.js"
-      },
-      {
-       
-        "src": "/products",
-        "dest": "index.js"
-      },
-      {
-       
-        "src": "/products/(.*)",
-        "dest": "index.js"
-      },
-      {
-        "src": "/",
-        "dest": "build/index.html"
-      },
-      {
-       
-        "src": "/(.+)",
-        "dest": "build/index.html"
-      }
-
-      
+      }  
     ]
 
     
