--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,17 @@
         "src": "/(.*)",
         "dest": "index.js"
       }
+    ],
+
+    "headers": [
+      {
+        "source": "/(.*)",
+        "headers": [
+          { "key": "Access-Control-Allow-Origin", "value": "http://localhost:5173" },
+          { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE" },
+          { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+        ]
+      }
     ]
   }
   
