--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGO_URL = mongodb+srv://amanagrawal0139:duMre62qqaoh0H2Y@cluster0.wrjg9oc.mong
 PUBLIC_DIR = build
 RAZORPAY_API_KEY = rzp_test_pZa22hfxIMxFrp
 RAZORPAY_API_SECRET = ZeHLhO4GBl6oEyjvzRt2ugV8
+RECOVERY_CODE= WV7ZKLHESSBWQFUTAA3FMWK6
